@@ -1,5 +1,6 @@
 Version 2.9, xx, xxxx, xxxx
 
+111. Implement remotePosterShow().
 110. Add a regression test for parameters passig with taskSpawn.
 109. Fix logMsg() on LP64 architectures.
 108. Produce an error if trying to create a device name longer than 
